[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/Movement.gd" type="Script" id=1]
[ext_resource path="res://ui/JoyStick.tscn" type="PackedScene" id=2]

[node name="Movement" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CanvasModulate" type="CanvasModulate" parent="CanvasLayer"]
color = Color( 1, 1, 1, 0.752941 )

[node name="Control" type="Control" parent="CanvasLayer/CanvasModulate"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 465.0
margin_bottom = 272.0
mouse_filter = 2

[node name="JoyStick" parent="CanvasLayer/CanvasModulate/Control" instance=ExtResource( 2 )]
show_move_sprite = true

[node name="FreezeTimer" type="Timer" parent="."]

[connection signal="timeout" from="FreezeTimer" to="." method="_on_FreezeTimer_timeout"]
